Fixed width to delete horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ button:active{
     content: "";
     position: absolute;
     left: 0;
-    width: 101vw;
+    width: 100%;
     height: 12vw;
     background-size: cover;
     background-repeat: no-repeat;
